--- a/src/index.html
+++ b/src/index.html
@@ -7,67 +7,37 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <div class="calendar">
+    <div class="calendar calendar--start-day--wed calendar--month-length--30">
       <div class="calendar__day"></div>
-
       <div class="calendar__day"></div>
-
       <div class="calendar__day"></div>
-
       <div class="calendar__day"></div>
-
       <div class="calendar__day"></div>
-
       <div class="calendar__day"></div>
-
       <div class="calendar__day"></div>
-
       <div class="calendar__day"></div>
-
       <div class="calendar__day"></div>
-
       <div class="calendar__day"></div>
-
       <div class="calendar__day"></div>
-
       <div class="calendar__day"></div>
-
       <div class="calendar__day"></div>
-
       <div class="calendar__day"></div>
-
       <div class="calendar__day"></div>
-
       <div class="calendar__day"></div>
-
       <div class="calendar__day"></div>
-
       <div class="calendar__day"></div>
-
       <div class="calendar__day"></div>
-
       <div class="calendar__day"></div>
-
       <div class="calendar__day"></div>
-
       <div class="calendar__day"></div>
-
       <div class="calendar__day"></div>
-
       <div class="calendar__day"></div>
-
       <div class="calendar__day"></div>
-
       <div class="calendar__day"></div>
-
       <div class="calendar__day"></div>
-
       <div class="calendar__day"></div>
-
       <div class="calendar__day"></div>
-
       <div class="calendar__day"></div>
-
       <div class="calendar__day"></div>
     </div>
   </body>
