--- a/src/index.html
+++ b/src/index.html
@@ -9,164 +9,39 @@
   </head>
 
   <body>
-
-    <div class="container">
-      <div class="cell">
-        <div class="cell__day">Mon</div>
-        <div class="cell__date">1</div>
-      </div>
-
-      <div class="cell">
-        <div class="cell__day">Tue</div>
-        <div class="cell__date">2</div>
-      </div>
-
-      <div class="cell">
-        <div class="cell__day">Wed</div>
-        <div class="cell__date">3</div>
-      </div>
-
-      <div class="cell">
-        <div class="cell__day">Thu</div>
-        <div class="cell__date">4</div>
-      </div>
-
-      <div class="cell">
-        <div class="cell__day">Fri</div>
-        <div class="cell__date">5</div>
-      </div>
-
-      <div class="cell">
-        <div class="cell__day">Sat</div>
-        <div class="cell__date">6</div>
-      </div>
-
-      <div class="cell">
-        <div class="cell__day">Sun</div>
-        <div class="cell__date">7</div>
-      </div>
-
-      <div class="cell">
-        <div class="cell__day">Mon</div>
-        <div class="cell__date">8</div>
-      </div>
-
-      <div class="cell">
-        <div class="cell__day">Tue</div>
-        <div class="cell__date">9</div>
-      </div>
-
-      <div class="cell">
-        <div class="cell__day">Wed</div>
-        <div class="cell__date">10</div>
-      </div>
-
-      <div class="cell">
-        <div class="cell__day">Thu</div>
-        <div class="cell__date">11</div>
-      </div>
-
-      <div class="cell">
-        <div class="cell__day">Fri</div>
-        <div class="cell__date">12</div>
-      </div>
-
-      <div class="cell">
-        <div class="cell__day">Sat</div>
-        <div class="cell__date">13</div>
-      </div>
-
-      <div class="cell">
-        <div class="cell__day">Sun</div>
-        <div class="cell__date">14</div>
-      </div>
-
-      <div class="cell">
-        <div class="cell__day">Mon</div>
-        <div class="cell__date">15</div>
-      </div>
-
-      <div class="cell">
-        <div class="cell__day">Tue</div>
-        <div class="cell__date">16</div>
-      </div>
-
-      <div class="cell">
-        <div class="cell__day">Wed</div>
-        <div class="cell__date">17</div>
-      </div>
-
-      <div class="cell">
-        <div class="cell__day">Thu</div>
-        <div class="cell__date">18</div>
-      </div>
-
-      <div class="cell">
-        <div class="cell__day">Fri</div>
-        <div class="cell__date">19</div>
-      </div>
-
-      <div class="cell">
-        <div class="cell__day">Sat</div>
-        <div class="cell__date">20</div>
-      </div>
-
-      <div class="cell">
-        <div class="cell__day">Sun</div>
-        <div class="cell__date">21</div>
-      </div>
-
-      <div class="cell">
-        <div class="cell__day">Mon</div>
-        <div class="cell__date">22</div>
-      </div>
-
-      <div class="cell">
-        <div class="cell__day">Tue</div>
-        <div class="cell__date">23</div>
-      </div>
-
-      <div class="cell">
-        <div class="cell__day">Wed</div>
-        <div class="cell__date">24</div>
-      </div>
-
-      <div class="cell">
-        <div class="cell__day">Thu</div>
-        <div class="cell__date">25</div>
-      </div>
-
-      <div class="cell">
-        <div class="cell__day">Fri</div>
-        <div class="cell__date">26</div>
-      </div>
-
-      <div class="cell">
-        <div class="cell__day">Sat</div>
-        <div class="cell__date">27</div>
-      </div>
-
-      <div class="cell">
-        <div class="cell__day">Sun</div>
-        <div class="cell__date">28</div>
-      </div>
-
-      <div class="cell">
-        <div class="cell__day">Mon</div>
-        <div class="cell__date">29</div>
-      </div>
-
-      <div class="cell">
-        <div class="cell__day">Tue</div>
-        <div class="cell__date">30</div>
-      </div>
-
-      <div class="cell">
-        <div class="cell__day">Wed</div>
-        <div class="cell__date">31</div>
-      </div>
+    <div class="calendar calendar__start-day-fri calendar__month-length-28">
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
     </div>
-
   </body>
 
 </html>
