--- a/src/index.html
+++ b/src/index.html
@@ -7,38 +7,38 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <div class="calendar">
-      <div class="cell cell--1"></div>
-      <div class="cell cell--2"></div>
-      <div class="cell cell--3"></div>
-      <div class="cell cell--4"></div>
-      <div class="cell cell--5"></div>
-      <div class="cell cell--6"></div>
-      <div class="cell cell--7"></div>
-      <div class="cell cell--8"></div>
-      <div class="cell cell--9"></div>
-      <div class="cell cell--10"></div>
-      <div class="cell cell--11"></div>
-      <div class="cell cell--12"></div>
-      <div class="cell cell--13"></div>
-      <div class="cell cell--14"></div>
-      <div class="cell cell--15"></div>
-      <div class="cell cell--16"></div>
-      <div class="cell cell--17"></div>
-      <div class="cell cell--18"></div>
-      <div class="cell cell--19"></div>
-      <div class="cell cell--20"></div>
-      <div class="cell cell--21"></div>
-      <div class="cell cell--22"></div>
-      <div class="cell cell--23"></div>
-      <div class="cell cell--24"></div>
-      <div class="cell cell--25"></div>
-      <div class="cell cell--26"></div>
-      <div class="cell cell--27"></div>
-      <div class="cell cell--28"></div>
-      <div class="cell cell--29"></div>
-      <div class="cell cell--30"></div>
-      <div class="cell cell--31"></div>
-    </div>
+    <ul class="calendar calendar--day-start--wed calendar--month-length--28">
+      <li class="calendar__cell calendar__cell--1"></li>
+      <li class="calendar__cell calendar__cell--2"></li>
+      <li class="calendar__cell calendar__cell--3"></li>
+      <li class="calendar__cell calendar__cell--4"></li>
+      <li class="calendar__cell calendar__cell--5"></li>
+      <li class="calendar__cell calendar__cell--6"></li>
+      <li class="calendar__cell calendar__cell--7"></li>
+      <li class="calendar__cell calendar__cell--8"></li>
+      <li class="calendar__cell calendar__cell--9"></li>
+      <li class="calendar__cell calendar__cell--10"></li>
+      <li class="calendar__cell calendar__cell--11"></li>
+      <li class="calendar__cell calendar__cell--12"></li>
+      <li class="calendar__cell calendar__cell--13"></li>
+      <li class="calendar__cell calendar__cell--14"></li>
+      <li class="calendar__cell calendar__cell--15"></li>
+      <li class="calendar__cell calendar__cell--16"></li>
+      <li class="calendar__cell calendar__cell--17"></li>
+      <li class="calendar__cell calendar__cell--18"></li>
+      <li class="calendar__cell calendar__cell--19"></li>
+      <li class="calendar__cell calendar__cell--20"></li>
+      <li class="calendar__cell calendar__cell--21"></li>
+      <li class="calendar__cell calendar__cell--22"></li>
+      <li class="calendar__cell calendar__cell--23"></li>
+      <li class="calendar__cell calendar__cell--24"></li>
+      <li class="calendar__cell calendar__cell--25"></li>
+      <li class="calendar__cell calendar__cell--26"></li>
+      <li class="calendar__cell calendar__cell--27"></li>
+      <li class="calendar__cell calendar__cell--28"></li>
+      <li class="calendar__cell calendar__cell--29"></li>
+      <li class="calendar__cell calendar__cell--30"></li>
+      <li class="calendar__cell calendar__cell--31"></li>
+    </ul>
   </body>
 </html>
