--- a/src/index.html
+++ b/src/index.html
@@ -7,56 +7,53 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./styles/day-block.scss">
-    <link rel="stylesheet" href="./styles/calendar-block.scss">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <div class="calendar">
-      <h1 class="task-name">Calendar</h1>
+    <div class="wrapper">
 
-      <ul class="calendar__week">
-        <li class="calendar__weekday">Mon</li>
-        <li class="calendar__weekday">Tue</li>
-        <li class="calendar__weekday">Wed</li>
-        <li class="calendar__weekday">Thu</li>
-        <li class="calendar__weekday">Fri</li>
-        <li class="calendar__weekday">Sat</li>
-        <li class="calendar__weekday">Sun</li>
+      <ul class="week">
+        <li class="week__day">Mon</li>
+        <li class="week__day">Tue</li>
+        <li class="week__day">Wed</li>
+        <li class="week__day">Thu</li>
+        <li class="week__day">Fri</li>
+        <li class="week__day">Sat</li>
+        <li class="week__day">Sun</li>
       </ul>
 
-      <ul class="calendar__days days">
-        <li class="days__day days__day--1 days__day--start-day"></li>
-        <li class="days__day days__day--2"></li>
-        <li class="days__day days__day--3"></li>
-        <li class="days__day days__day--4"></li>
-        <li class="days__day days__day--5"></li>
-        <li class="days__day days__day--6"></li>
-        <li class="days__day days__day--7"></li>
-        <li class="days__day days__day--8"></li>
-        <li class="days__day days__day--9"></li>
-        <li class="days__day days__day--10"></li>
-        <li class="days__day days__day--11"></li>
-        <li class="days__day days__day--12"></li>
-        <li class="days__day days__day--13"></li>
-        <li class="days__day days__day--14"></li>
-        <li class="days__day days__day--15"></li>
-        <li class="days__day days__day--16"></li>
-        <li class="days__day days__day--17"></li>
-        <li class="days__day days__day--18"></li>
-        <li class="days__day days__day--19"></li>
-        <li class="days__day days__day--20"></li>
-        <li class="days__day days__day--21"></li>
-        <li class="days__day days__day--22"></li>
-        <li class="days__day days__day--23"></li>
-        <li class="days__day days__day--24"></li>
-        <li class="days__day days__day--25"></li>
-        <li class="days__day days__day--26"></li>
-        <li class="days__day days__day--27"></li>
-        <li class="days__day days__day--28"></li>
-        <li class="days__day days__day--29"></li>
-        <li class="days__day days__day--30"></li>
-        <li class="days__day days__day--31"></li>
+      <ul class="calendar calendar--month-length--30 calendar--start-day--thu">
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
       </ul>
 
     </div>
