--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,38 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Calendar</h1>
+    <div class="block start--day-wed month--length-31">
+      <div class="block__item"></div>
+      <div class="block__item"></div>
+      <div class="block__item"></div>
+      <div class="block__item"></div>
+      <div class="block__item"></div>
+      <div class="block__item"></div>
+      <div class="block__item"></div>
+      <div class="block__item"></div>
+      <div class="block__item"></div>
+      <div class="block__item"></div>
+      <div class="block__item"></div>
+      <div class="block__item"></div>
+      <div class="block__item"></div>
+      <div class="block__item"></div>
+      <div class="block__item"></div>
+      <div class="block__item"></div>
+      <div class="block__item"></div>
+      <div class="block__item"></div>
+      <div class="block__item"></div>
+      <div class="block__item"></div>
+      <div class="block__item"></div>
+      <div class="block__item"></div>
+      <div class="block__item"></div>
+      <div class="block__item"></div>
+      <div class="block__item"></div>
+      <div class="block__item"></div>
+      <div class="block__item"></div>
+      <div class="block__item"></div>
+      <div class="block__item"></div>
+      <div class="block__item"></div>
+      <div class="block__item"></div>
+    </div>
   </body>
 </html>
