--- a/src/index.html
+++ b/src/index.html
@@ -9,38 +9,40 @@
   </head>
 
   <body>
-    <div class="calendar calendar__start-day-fri calendar__month-length-28">
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
+    <div class="calendar">
+      <ul class="calendar__container calendar__container--month-length--28">
+        <li class="calendar__day calendar__day--start-day--wed"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+      </ul>
     </div>
   </body>
 
