--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>Calendar</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
+  <body class="page">
     <div class="calendar calendar--start-day--sun calendar--days--29">
       <div class="calendar__cell"></div>
       <div class="calendar__cell"></div>
