fixed all the issues

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,8 @@
 
   <body>
     <div class="calendar">
-      <ul class="calendar__container calendar__container--month-length--28">
-        <li class="calendar__day calendar__day--start-day--wed"></li>
+      <ul class="calendar__container calendar__container--month-length--28 calendar__container--start-day--fri">
+        <li class="calendar__day"></li>
         <li class="calendar__day"></li>
         <li class="calendar__day"></li>
         <li class="calendar__day"></li>
@@ -45,5 +45,4 @@
       </ul>
     </div>
   </body>
-
 </html>
