--- a/src/index.html
+++ b/src/index.html
@@ -10,41 +10,39 @@
 
   <body>
     <div class="calendar">
-      <div class="calendar__month calendar__month--month-length--28">
+      <div class="calendar__month calendar__month--month-length--28 calendar__month--start-day--sat">
 
-        <div class="calendar__start-day calendar__start-day--thu"></div>
-
-        <div class="calendar-cell calendar-cell--1"></div>
-        <div class="calendar-cell calendar-cell--2"></div>
-        <div class="calendar-cell calendar-cell--3"></div>
-        <div class="calendar-cell calendar-cell--4"></div>
-        <div class="calendar-cell calendar-cell--5"></div>
-        <div class="calendar-cell calendar-cell--6"></div>
-        <div class="calendar-cell calendar-cell--7"></div>
-        <div class="calendar-cell calendar-cell--8"></div>
-        <div class="calendar-cell calendar-cell--9"></div>
-        <div class="calendar-cell calendar-cell--10"></div>
-        <div class="calendar-cell calendar-cell--11"></div>
-        <div class="calendar-cell calendar-cell--12"></div>
-        <div class="calendar-cell calendar-cell--13"></div>
-        <div class="calendar-cell calendar-cell--14"></div>
-        <div class="calendar-cell calendar-cell--15"></div>
-        <div class="calendar-cell calendar-cell--16"></div>
-        <div class="calendar-cell calendar-cell--17"></div>
-        <div class="calendar-cell calendar-cell--18"></div>
-        <div class="calendar-cell calendar-cell--19"></div>
-        <div class="calendar-cell calendar-cell--20"></div>
-        <div class="calendar-cell calendar-cell--21"></div>
-        <div class="calendar-cell calendar-cell--22"></div>
-        <div class="calendar-cell calendar-cell--23"></div>
-        <div class="calendar-cell calendar-cell--24"></div>
-        <div class="calendar-cell calendar-cell--25"></div>
-        <div class="calendar-cell calendar-cell--26"></div>
-        <div class="calendar-cell calendar-cell--27"></div>
-        <div class="calendar-cell calendar-cell--28"></div>
-        <div class="calendar-cell calendar-cell--29"></div>
-        <div class="calendar-cell calendar-cell--30"></div>
-        <div class="calendar-cell calendar-cell--31"></div>
+        <div class="calendar-day"></div>
+        <div class="calendar-day"></div>
+        <div class="calendar-day"></div>
+        <div class="calendar-day"></div>
+        <div class="calendar-day"></div>
+        <div class="calendar-day"></div>
+        <div class="calendar-day"></div>
+        <div class="calendar-day"></div>
+        <div class="calendar-day"></div>
+        <div class="calendar-day"></div>
+        <div class="calendar-day"></div>
+        <div class="calendar-day"></div>
+        <div class="calendar-day"></div>
+        <div class="calendar-day"></div>
+        <div class="calendar-day"></div>
+        <div class="calendar-day"></div>
+        <div class="calendar-day"></div>
+        <div class="calendar-day"></div>
+        <div class="calendar-day"></div>
+        <div class="calendar-day"></div>
+        <div class="calendar-day"></div>
+        <div class="calendar-day"></div>
+        <div class="calendar-day"></div>
+        <div class="calendar-day"></div>
+        <div class="calendar-day"></div>
+        <div class="calendar-day"></div>
+        <div class="calendar-day"></div>
+        <div class="calendar-day"></div>
+        <div class="calendar-day"></div>
+        <div class="calendar-day"></div>
+        <div class="calendar-day"></div>
       </div>
 
     </div>
