--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,8 @@
     <title>Calendar</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <div class="calendar">
-    <div class="calendar__start-day-wed"></div>
-    <div class="calendar__month-length-29"></div>
-
-    <div class="calendar__sheet" >
+  <main class="calendar calendar--start-day--wed calendar--month-length--29">
+    <section class="calendar__sheet">
       <div class="calendar__sheet-cell"></div>
       <div class="calendar__sheet-cell"></div>
       <div class="calendar__sheet-cell"></div>
@@ -42,8 +39,6 @@
       <div class="calendar__sheet-cell"></div>
       <div class="calendar__sheet-cell"></div>
       <div class="calendar__sheet-cell"></div>
-    </div>
-  </div>
-
-
+    </section>
+  </main>
 </html>
