--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="page__container">
-    <ul class="calendar calendar--month-length--29">
-      <li class="calendar__day calendar__day--start-day--sun"></li>
+    <ul class="calendar calendar--month-length--29 calendar--start-day--sun">
+      <li class="calendar__day"></li>
       <li class="calendar__day"></li>
       <li class="calendar__day"></li>
       <li class="calendar__day"></li>
