--- a/src/index.html
+++ b/src/index.html
@@ -6,39 +6,39 @@
     <title>Calendar</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <ul class="calendar calendar--day-start--wed calendar--month-length--28">
-      <li class="calendar__cell calendar__cell--1"></li>
-      <li class="calendar__cell calendar__cell--2"></li>
-      <li class="calendar__cell calendar__cell--3"></li>
-      <li class="calendar__cell calendar__cell--4"></li>
-      <li class="calendar__cell calendar__cell--5"></li>
-      <li class="calendar__cell calendar__cell--6"></li>
-      <li class="calendar__cell calendar__cell--7"></li>
-      <li class="calendar__cell calendar__cell--8"></li>
-      <li class="calendar__cell calendar__cell--9"></li>
-      <li class="calendar__cell calendar__cell--10"></li>
-      <li class="calendar__cell calendar__cell--11"></li>
-      <li class="calendar__cell calendar__cell--12"></li>
-      <li class="calendar__cell calendar__cell--13"></li>
-      <li class="calendar__cell calendar__cell--14"></li>
-      <li class="calendar__cell calendar__cell--15"></li>
-      <li class="calendar__cell calendar__cell--16"></li>
-      <li class="calendar__cell calendar__cell--17"></li>
-      <li class="calendar__cell calendar__cell--18"></li>
-      <li class="calendar__cell calendar__cell--19"></li>
-      <li class="calendar__cell calendar__cell--20"></li>
-      <li class="calendar__cell calendar__cell--21"></li>
-      <li class="calendar__cell calendar__cell--22"></li>
-      <li class="calendar__cell calendar__cell--23"></li>
-      <li class="calendar__cell calendar__cell--24"></li>
-      <li class="calendar__cell calendar__cell--25"></li>
-      <li class="calendar__cell calendar__cell--26"></li>
-      <li class="calendar__cell calendar__cell--27"></li>
-      <li class="calendar__cell calendar__cell--28"></li>
-      <li class="calendar__cell calendar__cell--29"></li>
-      <li class="calendar__cell calendar__cell--30"></li>
-      <li class="calendar__cell calendar__cell--31"></li>
+  <body class="page">
+    <ul class="calendar page__calendar calendar--day-start--mon calendar--month-length--28">
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
+      <li class="calendar__cell"></li>
     </ul>
   </body>
 </html>
