changes for the calendar

--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,8 @@
     <title>Calendar</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body class ="body">
-    <div class="calendar calendar--start-day--mon calendar--month--30 body__calendar--size-modifier">
+  <body class="body">
+    <div class="calendar calendar--start-day--mon calendar--month--30">
       <div class="calendar__cells"></div>
       <div class="calendar__cells"></div>
       <div class="calendar__cells"></div>
