--- a/src/index.html
+++ b/src/index.html
@@ -6,39 +6,41 @@
     <title>Calendar</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <main class="calendar calendar--start-day--wed calendar--month-length--29">
-    <section class="calendar__sheet">
-      <div class="calendar__sheet-cell"></div>
-      <div class="calendar__sheet-cell"></div>
-      <div class="calendar__sheet-cell"></div>
-      <div class="calendar__sheet-cell"></div>
-      <div class="calendar__sheet-cell"></div>
-      <div class="calendar__sheet-cell"></div>
-      <div class="calendar__sheet-cell"></div>
-      <div class="calendar__sheet-cell"></div>
-      <div class="calendar__sheet-cell"></div>
-      <div class="calendar__sheet-cell"></div>
-      <div class="calendar__sheet-cell"></div>
-      <div class="calendar__sheet-cell"></div>
-      <div class="calendar__sheet-cell"></div>
-      <div class="calendar__sheet-cell"></div>
-      <div class="calendar__sheet-cell"></div>
-      <div class="calendar__sheet-cell"></div>
-      <div class="calendar__sheet-cell"></div>
-      <div class="calendar__sheet-cell"></div>
-      <div class="calendar__sheet-cell"></div>
-      <div class="calendar__sheet-cell"></div>
-      <div class="calendar__sheet-cell"></div>
-      <div class="calendar__sheet-cell"></div>
-      <div class="calendar__sheet-cell"></div>
-      <div class="calendar__sheet-cell"></div>
-      <div class="calendar__sheet-cell"></div>
-      <div class="calendar__sheet-cell"></div>
-      <div class="calendar__sheet-cell"></div>
-      <div class="calendar__sheet-cell"></div>
-      <div class="calendar__sheet-cell"></div>
-      <div class="calendar__sheet-cell"></div>
-      <div class="calendar__sheet-cell"></div>
-    </section>
-  </main>
+  <body>
+    <main class="main">
+      <section class="calendar-sheet calendar-sheet--start-sun calendar-sheet--month-31">
+        <div class="calendar-sheet__cell"></div>
+        <div class="calendar-sheet__cell"></div>
+        <div class="calendar-sheet__cell"></div>
+        <div class="calendar-sheet__cell"></div>
+        <div class="calendar-sheet__cell"></div>
+        <div class="calendar-sheet__cell"></div>
+        <div class="calendar-sheet__cell"></div>
+        <div class="calendar-sheet__cell"></div>
+        <div class="calendar-sheet__cell"></div>
+        <div class="calendar-sheet__cell"></div>
+        <div class="calendar-sheet__cell"></div>
+        <div class="calendar-sheet__cell"></div>
+        <div class="calendar-sheet__cell"></div>
+        <div class="calendar-sheet__cell"></div>
+        <div class="calendar-sheet__cell"></div>
+        <div class="calendar-sheet__cell"></div>
+        <div class="calendar-sheet__cell"></div>
+        <div class="calendar-sheet__cell"></div>
+        <div class="calendar-sheet__cell"></div>
+        <div class="calendar-sheet__cell"></div>
+        <div class="calendar-sheet__cell"></div>
+        <div class="calendar-sheet__cell"></div>
+        <div class="calendar-sheet__cell"></div>
+        <div class="calendar-sheet__cell"></div>
+        <div class="calendar-sheet__cell"></div>
+        <div class="calendar-sheet__cell"></div>
+        <div class="calendar-sheet__cell"></div>
+        <div class="calendar-sheet__cell"></div>
+        <div class="calendar-sheet__cell"></div>
+        <div class="calendar-sheet__cell"></div>
+        <div class="calendar-sheet__cell"></div>
+      </section>
+    </main>
+  </body>
 </html>
