--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="page">
-    <ul class="calendar page__calendar calendar--day-start--mon calendar--month-length--28">
+    <ul class="calendar calendar--day-start--wed calendar--month-length--28">
       <li class="calendar__cell"></li>
       <li class="calendar__cell"></li>
       <li class="calendar__cell"></li>
