--- a/src/index.html
+++ b/src/index.html
@@ -7,38 +7,40 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <div class="block start--day-wed month--length-31">
-      <div class="block__item"></div>
-      <div class="block__item"></div>
-      <div class="block__item"></div>
-      <div class="block__item"></div>
-      <div class="block__item"></div>
-      <div class="block__item"></div>
-      <div class="block__item"></div>
-      <div class="block__item"></div>
-      <div class="block__item"></div>
-      <div class="block__item"></div>
-      <div class="block__item"></div>
-      <div class="block__item"></div>
-      <div class="block__item"></div>
-      <div class="block__item"></div>
-      <div class="block__item"></div>
-      <div class="block__item"></div>
-      <div class="block__item"></div>
-      <div class="block__item"></div>
-      <div class="block__item"></div>
-      <div class="block__item"></div>
-      <div class="block__item"></div>
-      <div class="block__item"></div>
-      <div class="block__item"></div>
-      <div class="block__item"></div>
-      <div class="block__item"></div>
-      <div class="block__item"></div>
-      <div class="block__item"></div>
-      <div class="block__item"></div>
-      <div class="block__item"></div>
-      <div class="block__item"></div>
-      <div class="block__item"></div>
+    <div class="container">
+      <ul class="calendar calendar--start-day-tue calendar--month-length-31">
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+      </ul>
     </div>
   </body>
 </html>
