add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -7,130 +7,38 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <div class="calendar calendar-start-day--mon calendar-month-length--31">
-      <div class="calendar__day">
-        <div class="calendar__1"></div>
-      </div>
-
-      <div class="calendar__day">
-        <div class="calendar__2"></div>
-      </div>
-
-      <div class="calendar__day">
-        <div class="calendar__3"></div>
-      </div>
-
-      <div class="calendar__day">
-        <div class="calendar__4"></div>
-      </div>
-
-      <div class="calendar__day">
-        <div class="calendar__5"></div>
-      </div>
-
-      <div class="calendar__day">
-        <div class="calendar__6"></div>
-      </div>
-
-      <div class="calendar__day">
-        <div class="calendar__7"></div>
-      </div>
-
-      <div class="calendar__day">
-        <div class="calendar__8"></div>
-      </div>
-
-      <div class="calendar__day">
-        <div class="calendar__9"></div>
-      </div>
-
-      <div class="calendar__day">
-        <div class="calendar__10"></div>
-      </div>
-
-      <div class="calendar__day">
-        <div class="calendar__11"></div>
-      </div>
-
-      <div class="calendar__day">
-        <div class="calendar__12"></div>
-      </div>
-
-      <div class="calendar__day">
-        <div class="calendar__13"></div>
-      </div>
-
-      <div class="calendar__day">
-        <div class="calendar__14"></div>
-      </div>
-
-      <div class="calendar__day">
-        <div class="calendar__15"></div>
-      </div>
-
-      <div class="calendar__day">
-        <div class="calendar__16"></div>
-      </div>
-
-      <div class="calendar__day">
-        <div class="calendar__17"></div>
-      </div>
-
-      <div class="calendar__day">
-        <div class="calendar__18"></div>
-      </div>
-
-      <div class="calendar__day">
-        <div class="calendar__19"></div>
-      </div>
-
-      <div class="calendar__day">
-        <div class="calendar__20"></div>
-      </div>
-
-      <div class="calendar__day">
-        <div class="calendar__21"></div>
-      </div>
-
-      <div class="calendar__day">
-        <div class="calendar__22"></div>
-      </div>
-
-      <div class="calendar__day">
-        <div class="calendar__23"></div>
-      </div>
-
-      <div class="calendar__day">
-        <div class="calendar__24"></div>
-      </div>
-
-      <div class="calendar__day">
-        <div class="calendar__25"></div>
-      </div>
-
-      <div class="calendar__day">
-        <div class="calendar__26"></div>
-      </div>
-
-      <div class="calendar__day">
-        <div class="calendar__27"></div>
-      </div>
-
-      <div class="calendar__day">
-        <div class="calendar__28"></div>
-      </div>
-
-      <div class="calendar__day">
-        <div class="calendar__29"></div>
-      </div>
-
-      <div class="calendar__day">
-        <div class="calendar__30"></div>
-      </div>
-
-      <div class="calendar__day">
-        <div class="calendar__31"></div>
-      </div>
+    <div class="calendar calendar--start-day--mon calendar--month-length--31">
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
     </div>
   </body>
 </html>
