add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,38 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Calendar</h1>
+    <div class="calendar">
+      <div class="calendar__mon start-day"></div>
+      <div class="calendar__tue start-day"></div>
+      <div class="calendar__wed start-day"></div>
+      <div class="calendar__thu start-day"></div>
+      <div class="calendar__fri start-day"></div>
+      <div class="calendar__sat start-day"></div>
+      <div class="calendar__sun start-day"></div>
+      <div class="calendar__mon start-day"></div>
+      <div class="calendar__tue start-day"></div>
+      <div class="calendar__wed start-day"></div>
+      <div class="calendar__thu start-day"></div>
+      <div class="calendar__fri start-day"></div>
+      <div class="calendar__sat start-day"></div>
+      <div class="calendar__sun start-day"></div>
+      <div class="calendar__mon start-day"></div>
+      <div class="calendar__tue start-day"></div>
+      <div class="calendar__wed start-day"></div>
+      <div class="calendar__thu start-day"></div>
+      <div class="calendar__fri start-day"></div>
+      <div class="calendar__sat start-day"></div>
+      <div class="calendar__sun start-day"></div>
+      <div class="calendar__mon start-day"></div>
+      <div class="calendar__tue start-day"></div>
+      <div class="calendar__wed start-day"></div>
+      <div class="calendar__thu start-day"></div>
+      <div class="calendar__fri start-day"></div>
+      <div class="calendar__sat start-day"></div>
+      <div class="calendar__month-length start-day"></div>
+      <div class="calendar__month-length start-day"></div>
+      <div class="calendar__month-length start-day"></div>
+      <div class="calendar__month-length start-day"></div>
+    </div>
   </body>
 </html>
