add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,38 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Calendar</h1>
+    <div class="block">
+      <div class="block__day start-day-fri"></div> <!-- change the start day -->
+      <div class="block__day"></div>
+      <div class="block__day"></div>
+      <div class="block__day"></div>
+      <div class="block__day"></div>
+      <div class="block__day"></div>
+      <div class="block__day"></div>
+      <div class="block__day"></div>
+      <div class="block__day"></div>
+      <div class="block__day"></div>
+      <div class="block__day"></div>
+      <div class="block__day"></div>
+      <div class="block__day"></div>
+      <div class="block__day"></div>
+      <div class="block__day"></div>
+      <div class="block__day"></div>
+      <div class="block__day"></div>
+      <div class="block__day"></div>
+      <div class="block__day"></div>
+      <div class="block__day"></div>
+      <div class="block__day"></div>
+      <div class="block__day"></div>
+      <div class="block__day"></div>
+      <div class="block__day"></div>
+      <div class="block__day"></div>
+      <div class="block__day"></div>
+      <div class="block__day"></div>
+      <div class="block__day"></div>
+      <div class="block__day"></div>
+      <div class="block__day"></div>
+      <div class="block__day"></div>
+    </div>
   </body>
 </html>
