add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -7,34 +7,34 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <div class="calendar">
-      <div class="calendar__mon start-day"></div>
-      <div class="calendar__tue start-day"></div>
-      <div class="calendar__wed start-day"></div>
-      <div class="calendar__thu start-day"></div>
-      <div class="calendar__fri start-day"></div>
-      <div class="calendar__sat start-day"></div>
-      <div class="calendar__sun start-day"></div>
-      <div class="calendar__mon start-day"></div>
-      <div class="calendar__tue start-day"></div>
-      <div class="calendar__wed start-day"></div>
-      <div class="calendar__thu start-day"></div>
-      <div class="calendar__fri start-day"></div>
-      <div class="calendar__sat start-day"></div>
-      <div class="calendar__sun start-day"></div>
-      <div class="calendar__mon start-day"></div>
-      <div class="calendar__tue start-day"></div>
-      <div class="calendar__wed start-day"></div>
-      <div class="calendar__thu start-day"></div>
-      <div class="calendar__fri start-day"></div>
-      <div class="calendar__sat start-day"></div>
-      <div class="calendar__sun start-day"></div>
-      <div class="calendar__mon start-day"></div>
-      <div class="calendar__tue start-day"></div>
-      <div class="calendar__wed start-day"></div>
-      <div class="calendar__thu start-day"></div>
-      <div class="calendar__fri start-day"></div>
-      <div class="calendar__sat start-day"></div>
+    <div class="calendar calendar--month-length--31 calendar--start-day--fri">
+      <div class="calendar__day start-day"></div>
+      <div class="calendar__day start-day"></div>
+      <div class="calendar__day start-day"></div>
+      <div class="calendar__day start-day"></div>
+      <div class="calendar__day start-day"></div>
+      <div class="calendar__day start-day"></div>
+      <div class="calendar__day start-day"></div>
+      <div class="calendar__day start-day"></div>
+      <div class="calendar__day start-day"></div>
+      <div class="calendar__day start-day"></div>
+      <div class="calendar__day start-day"></div>
+      <div class="calendar__day start-day"></div>
+      <div class="calendar__day start-day"></div>
+      <div class="calendar__day start-day"></div>
+      <div class="calendar__day start-day"></div>
+      <div class="calendar__day start-day"></div>
+      <div class="calendar__day start-day"></div>
+      <div class="calendar__day start-day"></div>
+      <div class="calendar__day start-day"></div>
+      <div class="calendar__day start-day"></div>
+      <div class="calendar__day start-day"></div>
+      <div class="calendar__day start-day"></div>
+      <div class="calendar__day start-day"></div>
+      <div class="calendar__day start-day"></div>
+      <div class="calendar__day start-day"></div>
+      <div class="calendar__day start-day"></div>
+      <div class="calendar__day start-day"></div>
       <div class="calendar__month-length start-day"></div>
       <div class="calendar__month-length start-day"></div>
       <div class="calendar__month-length start-day"></div>
