--- a/src/index.html
+++ b/src/index.html
@@ -7,38 +7,38 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <div class="block">
-      <div class="block__day start-day-fri"></div> <!-- change the start day -->
-      <div class="block__day"></div>
-      <div class="block__day"></div>
-      <div class="block__day"></div>
-      <div class="block__day"></div>
-      <div class="block__day"></div>
-      <div class="block__day"></div>
-      <div class="block__day"></div>
-      <div class="block__day"></div>
-      <div class="block__day"></div>
-      <div class="block__day"></div>
-      <div class="block__day"></div>
-      <div class="block__day"></div>
-      <div class="block__day"></div>
-      <div class="block__day"></div>
-      <div class="block__day"></div>
-      <div class="block__day"></div>
-      <div class="block__day"></div>
-      <div class="block__day"></div>
-      <div class="block__day"></div>
-      <div class="block__day"></div>
-      <div class="block__day"></div>
-      <div class="block__day"></div>
-      <div class="block__day"></div>
-      <div class="block__day"></div>
-      <div class="block__day"></div>
-      <div class="block__day"></div>
-      <div class="block__day"></div>
-      <div class="block__day"></div>
-      <div class="block__day"></div>
-      <div class="block__day"></div>
+    <div class="calendar-block calendar-block--month--length--30 calendar-block--start--day--sun">
+      <div class="calendar-block__day"></div>
+      <div class="calendar-block__day"></div>
+      <div class="calendar-block__day"></div>
+      <div class="calendar-block__day"></div>
+      <div class="calendar-block__day"></div>
+      <div class="calendar-block__day"></div>
+      <div class="calendar-block__day"></div>
+      <div class="calendar-block__day"></div>
+      <div class="calendar-block__day"></div>
+      <div class="calendar-block__day"></div>
+      <div class="calendar-block__day"></div>
+      <div class="calendar-block__day"></div>
+      <div class="calendar-block__day"></div>
+      <div class="calendar-block__day"></div>
+      <div class="calendar-block__day"></div>
+      <div class="calendar-block__day"></div>
+      <div class="calendar-block__day"></div>
+      <div class="calendar-block__day"></div>
+      <div class="calendar-block__day"></div>
+      <div class="calendar-block__day"></div>
+      <div class="calendar-block__day"></div>
+      <div class="calendar-block__day"></div>
+      <div class="calendar-block__day"></div>
+      <div class="calendar-block__day"></div>
+      <div class="calendar-block__day"></div>
+      <div class="calendar-block__day"></div>
+      <div class="calendar-block__day"></div>
+      <div class="calendar-block__day"></div>
+      <div class="calendar-block__day"></div>
+      <div class="calendar-block__day"></div>
+      <div class="calendar-block__day"></div>
     </div>
   </body>
 </html>
