--- a/src/index.html
+++ b/src/index.html
@@ -7,38 +7,38 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="page__content">
-    <div class="month month--month-length--31">
-      <div class="month__day month__day--start-day--sun"></div>
-      <div class="month__day"></div>
-      <div class="month__day"></div>
-      <div class="month__day"></div>
-      <div class="month__day"></div>
-      <div class="month__day"></div>
-      <div class="month__day"></div>
-      <div class="month__day"></div>
-      <div class="month__day"></div>
-      <div class="month__day"></div>
-      <div class="month__day"></div>
-      <div class="month__day"></div>
-      <div class="month__day"></div>
-      <div class="month__day"></div>
-      <div class="month__day"></div>
-      <div class="month__day"></div>
-      <div class="month__day"></div>
-      <div class="month__day"></div>
-      <div class="month__day"></div>
-      <div class="month__day"></div>
-      <div class="month__day"></div>
-      <div class="month__day"></div>
-      <div class="month__day"></div>
-      <div class="month__day"></div>
-      <div class="month__day"></div>
-      <div class="month__day"></div>
-      <div class="month__day"></div>
-      <div class="month__day"></div>
-      <div class="month__day"></div>
-      <div class="month__day"></div>
-      <div class="month__day"></div>
+    <div class="calendar calendar--calendar-length--31">
+      <div class="calendar__day calendar__day--start-day--sun"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
     </div>
   </body>
 </html>
