--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,10 @@
     <title>Calendar</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
+
   <body class="page__content">
-    <div class="calendar calendar--calendar-length--31">
-      <div class="calendar__day calendar__day--start-day--sun"></div>
+    <div class="calendar calendar--calendar-length--31 calendar--start-day--sun">
+      <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
@@ -41,4 +42,5 @@
       <div class="calendar__day"></div>
     </div>
   </body>
+
 </html>
