add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -7,38 +7,38 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <ul class="calendar calendar--start-day--mon calendar--month-length-31">
-      <li class="calendar__cell"></li>
-      <li class="calendar__cell"></li>
-      <li class="calendar__cell"></li>
-      <li class="calendar__cell"></li>
-      <li class="calendar__cell"></li>
-      <li class="calendar__cell"></li>
-      <li class="calendar__cell"></li>
-      <li class="calendar__cell"></li>
-      <li class="calendar__cell"></li>
-      <li class="calendar__cell"></li>
-      <li class="calendar__cell"></li>
-      <li class="calendar__cell"></li>
-      <li class="calendar__cell"></li>
-      <li class="calendar__cell"></li>
-      <li class="calendar__cell"></li>
-      <li class="calendar__cell"></li>
-      <li class="calendar__cell"></li>
-      <li class="calendar__cell"></li>
-      <li class="calendar__cell"></li>
-      <li class="calendar__cell"></li>
-      <li class="calendar__cell"></li>
-      <li class="calendar__cell"></li>
-      <li class="calendar__cell"></li>
-      <li class="calendar__cell"></li>
-      <li class="calendar__cell"></li>
-      <li class="calendar__cell"></li>
-      <li class="calendar__cell"></li>
-      <li class="calendar__cell"></li>
-      <li class="calendar__cell"></li>
-      <li class="calendar__cell"></li>
-      <li class="calendar__cell"></li>
-    </ul>
+    <div class="calendar calendar--start-day--wed calendar--month-length-30">
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+    </div>
   </body>
 </html>
