add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="calendar">
       <div class="calendar__day">
-        <div class="day day__01"></div>
+        <div class="day"></div>
         <div class="day"></div>
         <div class="day"></div>
         <div class="day"></div>
