add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <div class="calendar">
-      <div class="calendar__day">
+    <div class="calendar calendar-start-day--mon calendar-month-length--28">
+        <div class="day day__01"></div>
         <div class="day"></div>
         <div class="day"></div>
         <div class="day"></div>
@@ -39,8 +39,6 @@
         <div class="day"></div>
         <div class="day"></div>
         <div class="day"></div>
-        <div class="day"></div>
-      </div>
     </div>
   </body>
 </html>
