first-first commit

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <ul class="calendar-list calendar-list--month-length--28">
-      <li class="calendar-list__item calendar-list__item--start-day-sun"></li>
+    <ul class="calendar-list calendar-list--start-day--wed calendar-list--month-length--29">
+      <li class="calendar-list__item "></li>
       <li class="calendar-list__item"></li>
       <li class="calendar-list__item"></li>
       <li class="calendar-list__item"></li>
@@ -35,10 +35,10 @@
       <li class="calendar-list__item"></li>
       <li class="calendar-list__item"></li>
       <li class="calendar-list__item"></li>
-      <li class="calendar-list__item calendar-list__item--28"></li>
-      <li class="calendar-list__item calendar-list__item--29"></li>
-      <li class="calendar-list__item calendar-list__item--30"></li>
-      <li class="calendar-list__item calendar-list__item--31"></li>
+      <li class="calendar-list__item "></li>
+      <li class="calendar-list__item "></li>
+      <li class="calendar-list__item "></li>
+      <li class="calendar-list__item "></li>
     </ul>
   </body>
 </html>
