add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,102 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Calendar</h1>
+    <div class="calendar">
+      <div class="calendar">
+        <div class="calendar__day">
+          <div class="day-of-week day-of-week--1 day-of-week--mon"></div>
+        </div>
+        <div class="calendar__day">
+          <div class="day-of-week day-of-week--2 day-of-week--tue"></div>
+        </div>
+        <div class="calendar__day">
+          <div class="day-of-week day-of-week--3 day-of-week--wed"></div>
+        </div>
+        <div class="calendar__day">
+          <div class="day-of-week day-of-week--4 day-of-week--thu"></div>
+        </div>
+        <div class="calendar__day">
+          <div class="day-of-week day-of-week--5 day-of-week--fri"></div>
+        </div>
+        <div class="calendar__day">
+          <div class="day-of-week day-of-week--6 day-of-week--sat"></div>
+        </div>
+        <div class="calendar__day">
+          <div class="day-of-week day-of-week--7 day-of-week--sun"></div>
+        </div>
+        <div class="calendar__day">
+          <div class="day-of-week day-of-week--8 day-of-week--mon"></div>
+        </div>
+        <div class="calendar__day">
+          <div class="day-of-week day-of-week--9 day-of-week--tue"></div>
+        </div>
+        <div class="calendar__day">
+          <div class="day-of-week day-of-week--10 day-of-week--wed"></div>
+        </div>
+        <div class="calendar__day">
+          <div class="day-of-week day-of-week--11 day-of-week--thu"></div>
+        </div>
+        <div class="calendar__day">
+          <div class="day-of-week day-of-week--12 day-of-week--fri"></div>
+        </div>
+        <div class="calendar__day">
+          <div class="day-of-week day-of-week--13 day-of-week--sat"></div>
+        </div>
+        <div class="calendar__day">
+          <div class="day-of-week day-of-week--14 day-of-week--sun"></div>
+        </div>
+        <div class="calendar__day">
+          <div class="day-of-week day-of-week--15 day-of-week--mon"></div>
+        </div>
+        <div class="calendar__day">
+          <div class="day-of-week day-of-week--16 day-of-week--tue"></div>
+        </div>
+        <div class="calendar__day">
+          <div class="day-of-week day-of-week--17 day-of-week--wed"></div>
+        </div>
+        <div class="calendar__day">
+          <div class="day-of-week day-of-week--18 day-of-week--thu"></div>
+        </div>
+        <div class="calendar__day">
+          <div class="day-of-week day-of-week--19 day-of-week--fri"></div>
+        </div>
+        <div class="calendar__day">
+          <div class="day-of-week day-of-week--20 day-of-week--sat"></div>
+        </div>
+        <div class="calendar__day">
+          <div class="day-of-week day-of-week--21 day-of-week--sun"></div>
+        </div>
+        <div class="calendar__day">
+          <div class="day-of-week day-of-week--22 day-of-week--mon"></div>
+        </div>
+        <div class="calendar__day">
+          <div class="day-of-week day-of-week--23 day-of-week--tue"></div>
+        </div>
+        <div class="calendar__day">
+          <div class="day-of-week day-of-week--24 day-of-week--wed"></div>
+        </div>
+        <div class="calendar__day">
+          <div class="day-of-week day-of-week--25 day-of-week--thu"></div>
+        </div>
+        <div class="calendar__day">
+          <div class="day-of-week day-of-week--26 day-of-week--fri"></div>
+        </div>
+        <div class="calendar__day">
+          <div class="day-of-week day-of-week--27 day-of-week--sat"></div>
+        </div>
+        <div class="calendar__day">
+          <div class="day-of-week day-of-week--28 day-of-week--sun day-of-week--month-length"></div>
+        </div>
+        <div class="calendar__day">
+          <div class="day-of-week day-of-week--29 day-of-week--mon day-of-week--month-length"></div>
+        </div>
+        <div class="calendar__day">
+          <div class="day-of-week day-of-week--30 day-of-week--tue day-of-week--month-length"></div>
+        </div>
+        <div class="calendar__day">
+          <div class="day-of-week day-of-week--31 day-of-week--wed day-of-week--month-length"></div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
